Use Integer#valueOf instead of constructor
- The constructor circumvents the cache for Integers.
- The constructor is deprecated since Java 9.